# entail

./: .gitignore  Cargo.toml  LICENSE.md  README.md  docker-compose.yaml
.github/workflows/: docs.yml
entail/: Cargo.toml
entail/.github/workflows/: docs.yml
entail/src/: lib.rs
entail/src/adapter/: mod.rs  model_update.rs
entail/src/ds/: entity.rs  mod.rs  mutation.rs  query.rs  shell.rs  transaction.rs
entail/tests/: code_gen.rs  common.rs  ds_test.rs
entail_derive/: Cargo.toml
entail_derive/src/: lib.rs
