[package]
name = "entail"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.142"
entail_derive = { path = "../entail_derive" }
tokio = { version = "1.47.1", features = ["full"] }
hyper-rustls = "0.27.7"
hyper-util = "0.1.16"
rustls = "0.23.31"
google-apis-common = "8.0.0"
google-datastore1 = "6.0.0"
strum = { version = "0.27.2", features = ["derive"] }
chrono = "0.4.42"
fastrand = "2.3.0"
